import com.vanniktech.maven.publish.SonatypeHost

plugins {
    id 'fabric-loom' version "${loom_version}"
    id 'maven-publish'
    id "com.modrinth.minotaur" version "2.+"
    id "com.vanniktech.maven.publish" version "0.28.0"
    id 'signing'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name + "-" + project.mod_version + "-" + project.minecraft_version
}

repositories {
    maven { url "https://maven.shedaniel.me/" }
    maven { url "https://maven.terraformersmc.com/" }
    maven { url "https://maven.isxander.dev/releases" }
    maven { url "https://api.modrinth.com/maven" }
    maven { url = "https://maven.quiltmc.org/repository/release"}
    // Add repositories to retrieve artifacts from in here.
    // You should only use this when depending on other mods because
    // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
    // See https://docs.gradle.org/current/userguide/declaring_repositories.html
    // for more information about repositories.
}

loom {
    //splitEnvironmentSourceSets()

    accessWidenerPath = file("src/main/resources/pets.accessWidener")

    mods {
        "pets-mod" {
            sourceSet sourceSets.main
        }
    }
}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.officialMojangMappings()
    modApi "net.fabricmc:fabric-loader:${project.loader_version}"
    modApi "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
    // Fabric API. This is technically optional, but you probably want it anyway.
    modApi "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
    modApi("com.terraformersmc:modmenu:${project.modmenu_version}")
    //modApi "dev.isxander:yet-another-config-lib:${project.yacl_version}"
    //modApi "maven.modrinth:yacl:${project.yacl_version}"
   // modImplementation "org.quiltmc.parsers:gson:0.2.1"
    //modImplementation "org.quiltmc.parsers:json:0.2.1"
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": inputs.properties.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 8
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()
    withJavadocJar()

    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

jar {
    inputs.property "archivesName", project.base.archivesName
    from sourceSets.main.allSource

    from("LICENSE") {
        rename { "${it}_${inputs.properties.archivesName}" }
    }
    tasks.withType(AbstractCopyTask).configureEach {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    }
}

// configure the maven publication
mavenPublishing {
    publishToMavenCentral(SonatypeHost.CENTRAL_PORTAL)
    signAllPublications()
    coordinates("io.github.downloadableduck", "petsmod", "0.8.1")
    pom {
        name = "Pets Mod"
        description = "Adds client-sided pets into your game"
        url = "https://github.com/downloadableduck/petsmod"
        licenses {
            license {
                name = "MIT"
                url = "https://opensource.org/licenses/MIT"
            }
        }
        developers {
            developer {
                id = "jeff"
                name = "Jeff"
            }
        }
        scm {
            connection = "scm:git:git://github.com/downloadableduck/petsmod.git"
            developerConnection = "scm:git:ssh://github.com:downloadableduck/petsmod.git"
            url = "https://github.com/downloadableduck/petsmod"
        }
    }
}

/*modrinth {
    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
    System.out.println("Enter a Modrinth token: ");
    token = br.readLine(); // Enter the token you got from the basics part of this tutorial.
    projectId = "WwqTyEtB" // Enter your Modrinth project ID here.
    System.out.println("Enter the version number:");
    versionNumber = project.mod_version;
    System.out.println("Enter the version name:");
    versionName = br.readLine();
    System.out.println("Enter the game version number: (See minotaur docs for valids)");
    gameVersions = [br.readLine()];
    System.out.println("Enter changelog:");
    changelog = br.readLine();
    additionalFiles = [sourcesJar, javadocJar]
    loaders = ["fabric"]
}*/

tasks.named('jar') {
    archiveBaseName = project.archives_base_name
    archiveVersion = project.mod_version
    archiveClassifier = project.minecraft_version
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << "-Xmaxerrs" << "5000"
}